Fix play button and dark mode

--- a/new_styles.css
+++ b/new_styles.css
@@ -36,8 +36,8 @@ body {
     display: flex;
     flex-direction: column;
     width: fit-content;
-    height: fit-content;
-    border-radius: 10px;
+    height: 400px;
+    border-radius: 0px 10px 10px 0px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     padding: 20px;
@@ -271,18 +271,27 @@ input:checked + .theme-slider:before {
 }
 .playlist-container {
     width: 300px; /* Adjust the width as needed */
-    min-height: 100px;
-    max-height: 500px; /* Adjust the height to show 5 items */
+    height: 400px; /* Adjust the height to show 5 items */
     overflow-y: scroll;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     padding: 10px;
     box-sizing: border-box;
     display: flex;
     align-items: center;
     flex-direction: column;
+    background-color: #f0f0f0;
+    /* background-color: var(--bg-color); */
+    border-radius: 10px 0px 0px 10px;
 }
+
+body.dark-theme .playlist-container {
+    background-color: #444;
+    color: #e4e4e4;
+}
+
 .playlist-item {
-    height: 70px; /* Adjust the height of each item */
+    min-height: 60px; /* Adjust the height of each item */
+    max-height: 61px; /* Adjust the height of each item */
     width: 99%;
     margin-bottom: 10px;
     background-color: #f0f0f0;
@@ -300,7 +309,7 @@ input:checked + .theme-slider:before {
     overflow: hidden;
     text-overflow: ellipsis;
 }
-.playlist-item .play-button {
+.playlist-item .playlist-play-button {
     display: none;
     margin-left: 10px;
     /* position: absolute;
@@ -321,6 +330,11 @@ input:checked + .theme-slider:before {
     background-color: #2e3c6c;
     transition: 250ms;
 }
+
+body.dark-theme .playlist-item {
+    background-color: #444;
+    color: #e4e4e4;
+}
 /* Button-plus style: */
 .button-plus {
   background: #fff;
@@ -335,4 +349,9 @@ input:checked + .theme-slider:before {
 .button-plus:hover {
   background-color: #095776;
   transition: 0.2s;
+}
+
+body.dark-theme .button-plus {
+    background-color: #444;
+    color: #e4e4e4;
 }
